assets/gitbook/homepage.css
/* ... */
.navbar-nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 50px;
}

.navbar-nav button{
    align-self: center;
    margin-bottom: 0px;
}

.menu-content {
    display: flex;
    flex-direction: column;
    height: fit-content;
    align-items: center;
    border-radius: 5px;
    text-align: center;
    gap: 8px;
    color: var(--palette-1-text-primary, #EFF0F4);
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    width: 80vw;
}

.menu-content .cta-filled {
    margin-top: 1em;
    width: 100%;
}

.menu-content details {
    padding: 0.8em 0 0.5em 0;
}

.modal-career-tracks {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
    margin-top: 16px;
    padding-left: 16px;
}

.close-modal {
    position: absolute;
    top: 32px;
    right: 30px;
    font-size: 2rem;
    cursor: pointer;
    color: #2B3673;
}

.service-card {
    padding: 32px 16px;
    gap: 16px;
}

.card-header {
    display: flex;
    flex-direction: column;
    align-self: stretch;
    padding-bottom: 15px;
    border-bottom: dashed 1px #4C4D58;
}

/* Navigation - Drop-downs */

.dropdown {
    position: relative;
    display: flex;
    align-items: flex-start;
}

.popover-toggle {
    border: none;
}

.popover-content {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin-top: 1rem;
  }
  
  .popover-content a {
    display: block;
    text-decoration: none;
    padding: 8px 0;
  }


/* Hero */

.hero {
    padding-top: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 100vw;
}

.hero-bg {
    padding: 6em 1em;
    background-image: url('/assets/images/hero-bg.png');
    background-size: cover;
    background-repeat: no-repeat;
}

.hero img {
    display: none;
}

.h-subject{
    flex-direction: column;
    align-items: flex-start;
    height: 5.5rem;
    display: flex;
    position: relative;
    overflow: hidden;
    margin: 2em;
    width: 600px;
}

.h-container{
    z-index: 1;
    margin-top: .3rem;
    line-height: 1.2rem;
    position: relative;
}

.h-row {
    display: flex;
}

.h-container h1 {
    margin: 0;
}

#profession {
    margin: 0;
}
  

#changingProfession {
    transition: opacity 3s ease-in-out;
}
  
.fade-out {
    opacity: 0;
}

  
.hero a {
    width: 100%;
}

.photo img{
    width: 100%;
}

/* ABOUT SECTION */

.abt-section {
    display: flex;
    flex-direction: column;
    max-width: 1200px;
    padding: 16px;
    justify-content: space-between;
    align-items: flex-start;
}

.abt-left {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 8px;
}

.abt-right {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    max-width: 470px;
}

.abt-right a {
    border-bottom: 1px solid #2B3673;
}

/* UNLEASH YOUR POTENTIAL */

.potential-card {
    padding: 24px;
    /* width: 33.3%; */
}

.potential-card h4,
.perks-info h4 {
    /* font-size: 36px; */
    font-weight: 900;
}

.potential-wrap {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-self: stretch;
    justify-content: space-between;
    margin-top: 32px;
    gap: 16px;

}

/* WHY DATA PROFESSIONALS CHOOSE SURFALYTICS */

.perks-wrap {
    margin-top: 64px;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.perks-card {
    display: flex;
    flex-direction: column;
    padding: 24px;
    gap: 24px;
    justify-content: center;
    align-items: center;
    align-self: stretch;
}

.perks-card img {
    max-width: 100%;
}

.perks-info {
    max-width: 556px;
}

.perks-info a {
    font-size: 1.125rem;
    border-bottom: 1px solid #2b3673;
}

.perks-info a:hover {
    border-bottom: 1px solid #2b36737c;
}

/* swag section */

.swag-section {
    display: flex;
    flex-direction: column-reverse;
    padding: 32px 16px;
    align-items: center;
    gap: 32px;
}

.swag-img {
    width: 300px;
    mix-blend-mode: multiply; 
    flex-shrink: 0;
    border-radius: 20px;
}

.margin-m {
    margin-bottom: 1em;
}

/* Mobile burger menu */

@media only screen and (max-width: 1200px) {
    .navbar {
        flex-direction: column;
        align-items: flex-start;
    }

    .menu-icon {
        display: block;
    }

    .navbar-nav {
        display: none;
    }

    .navbar-nav.show {
        display: block;
        width: 100%;
        position: absolute;
        background-color: #333;
        text-align: center;
    }

    .navbar-nav a {
        display: block;
        padding: 15px;
    }

}

.founder-photo {
    width: 310px;
    height: 100%;
    margin-bottom: 1.5em;
}

footer > .two-col {
    gap: 30px;
}

/* Drop-down list */

.drop-down {
    margin: 1em 0 1.5em 0;
}

.faq {
    display: flex;
    flex-direction: column;
    gap: 20px;
    max-width: 1024px;
}

summary {
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

details {
    display: flex;
    flex-direction: column;
    padding: 0.8em 1em 0.5em 0;
    justify-content: center;
    align-items: center;
    align-self: stretch;
    border-bottom: 1px solid #CCCFEE;
    max-width: 1024px;
    font-size: 1rem;
    font-weight: 400;
    line-height: 150%;
}

.left-aligned details {
    align-items: baseline;
}

/* Buttons and links */

.navbar-links a {
    border-bottom: 1px solid rgba(255, 255, 255, 0);
    line-height: 24px;
    transition: border 0.3s ease;
}

.navbar-links a:hover {
    border-bottom: 1px solid #2B3673;
}

.service-card a{
    align-self: stretch; 
    width: 100%; 
    text-decoration: none;
}
/* ... */

